feat: update deps to polkadot sdk v1.13.0

--- a/Cargo.dev.toml
+++ b/Cargo.dev.toml
@@ -28,6 +28,9 @@ members = [
 
 resolver = "2"
 
+[workspace.metadata.orml]
+crates-version = "0.13.0"
+
 [profile.dev]
 split-debuginfo = "unpacked"
 
